test/parse/assert/bad-assertreturn-non-const.txt
;;; TOOL: wast2json
;;; ERROR: 1
(module
  (func $bar (param f32) (result f32) 
    local.get 0)
  (export "bar" (func $bar)))

;; NOT ok to use more complex exprs
(assert_return
  (invoke "bar"
    (f32.add (f32.const 1) (f32.const 10)))
  (f32.const 11))
(;; STDERR ;;;
out/test/parse/assert/bad-assertreturn-non-const.txt:11:5: error: unexpected token (, expected ).
    (f32.add (f32.const 1) (f32.const 10)))
    ^
;;; STDERR ;;)
